--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,8 @@
       rel="stylesheet"
     />
     <title>세광사</title>
+
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ae91f14c64e39c5e946b392d5b17331e"></script>
   </head>
   <body class="sidebar-collapse">
     <noscript>You need to enable JavaScript to run this app.</noscript>
